added primeicons + finished html + css for header and start- page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header class="absolute w-full"></app-header>
+<app-header class="absolute w-full z-10"></app-header>
 <router-outlet></router-outlet>
