--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<main class="flex justify-between py-2.5 px-24">
+<main class="flex justify-between py-10 px-24">
   <img src="assets/images/videoflix_logo.svg" alt="Videoflix Logo" class="cursor-pointer"/>
-  <p-button severity="primary" class="font-bold text-lg">Log in</p-button>
+  <p-button severity="primary" class="font-bold text-lg" label="Log in"></p-button>
 </main>
