--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,1 +1,15 @@
-<p>start-page works!</p>
+<main class="relative min-h-screen bg-cover bg-center bg-no-repeat start-page-bg flex flex-col items-center justify-center text-white text-center">
+  <h1 class="font-bold text-5xl pb-6">Movies, TV shows, and more</h1>
+  <p class="text-lg">Enter your email to create or restart your subscription.</p>
+  <div>
+    <form class="flex items-center mt-6 gap-4">
+      <input class="w-80" type="email" pInputText placeholder="Email Address">
+      <p-button
+        [icon]="primeicons.ANGLE_RIGHT"
+        iconPos="right"
+        severity="primary" class="font-bold text-lg"
+        label="Sign Up"
+      ></p-button>
+    </form>
+  </div>
+</main>
