--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,13 +1,17 @@
-.start-page-bg {
+.login-bg {
   background-image:
     linear-gradient(180deg, #000000 -19.89%, rgba(0, 0, 0, 0.55) 40.46%, #000000 100%),
-    url('/assets/images/start_page.jpg');
+    url('/assets/images/login.jpg');
+}
+
+.form-container {
+  background-color: #1B1B22D9;
+  border-radius: 48px;
 }
 
 .p-inputtext:enabled {
-  border-radius: 40px;
   background-color:  #1C1A20CC;
-  border-color: #FFFFFF;
+  border-color: var(--p-primary-color);
   color: #FFFFFF;
 
   &:focus {
@@ -20,5 +24,3 @@
     opacity: 1;
   }
 }
-
-
