added sign up plus design login and sign up

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,14 @@
 <main class="flex justify-between py-10 px-24">
-  <img src="assets/images/videoflix_logo.svg" alt="Videoflix Logo" class="cursor-pointer"/>
-  <p-button severity="primary" class="font-bold text-lg" label="Log in"></p-button>
+  <img
+    src="assets/images/videoflix_logo.svg"
+    alt="Videoflix Logo"
+    class="cursor-pointer"
+    [routerLink]="'/'"
+  />
+  <p-button
+    severity="primary"
+    class="font-bold text-lg"
+    label="Log in"
+    [routerLink]="'/login'"
+  ></p-button>
 </main>
