--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,22 +1,39 @@
 <main class="relative min-h-screen bg-cover bg-center bg-no-repeat login-bg flex flex-col items-center justify-center text-white text-center">
-  <form class="form-container flex flex-col items-center mt-6 gap-4 py-11 px-14 ">
+  <form class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto">
     <h1 class="font-bold text-5xl">Log in</h1>
 
-    <p-iconfield class="w-full">
+    <p-iconfield class="sm:w-96 w-full">
       <p-inputicon [styleClass]="primeicons.ENVELOPE"  />
       <input class="w-full" type="email" pInputText placeholder="Email Address" />
     </p-iconfield>
 
-    <p-iconfield class="w-full" >
+    <p-iconfield class="sm:w-96 w-full" >
       <p-inputicon [styleClass]="primeicons.LOCK" />
-      <input class="w-full" type="password" pInputText placeholder="Password" />
-      <p-inputicon [styleClass]="primeicons.EYE" />
+      <input
+        class="w-full"
+        [type]="showPassword ? 'text' : 'password'"
+        pInputText
+        placeholder="Password"
+      />
+      <p-inputicon
+        [styleClass]="showPassword ? primeicons.EYE_SLASH : primeicons.EYE"
+        (click)="togglePassword()"
+        class="cursor-pointer"
+        />
     </p-iconfield>
 
-    <p-button
-      severity="primary"
-      class="font-bold text-lg"
-      label="Log in"
-    ></p-button>
+    <div class="flex flex-col gap-4">
+      <p-button
+        severity="primary"
+        class="font-bold text-lg"
+        label="Log in"
+      ></p-button>
+
+      <a class="font-medium text-lg" href="/forgot-password">Forgot password?</a>
+      <div class="flex jusify-center items-center gap-4">
+        <p class="font-medium text-lg">New to Videoflix?</p>
+        <a class="font-bold text-lg" href="/sign-up">Sign up now</a>
+      </div>
+    </div>
   </form>
 </main>
