--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,26 +1,30 @@
 .login-bg {
-  background-image:
-    linear-gradient(180deg, #000000 -19.89%, rgba(0, 0, 0, 0.55) 40.46%, #000000 100%),
-    url('/assets/images/login.jpg');
+  background-image: linear-gradient(
+      180deg,
+      #000000 -19.89%,
+      rgba(0, 0, 0, 0.55) 40.46%,
+      #000000 100%
+    ),
+    url("/assets/images/login.jpg");
 }
 
 .form-container {
-  background-color: #1B1B22D9;
+  background-color: #1b1b22d9;
   border-radius: 48px;
 }
 
 .p-inputtext:enabled {
-  background-color:  #1C1A20CC;
+  background-color: #1c1a20cc;
   border-color: var(--p-primary-color);
-  color: #FFFFFF;
+  color: #ffffff;
 
   &:focus {
-    background-color: #1C1A20CC;
+    background-color: #1c1a20cc;
     border-color: var(--p-primary-color);
   }
 
-   &::placeholder {
-    color: #FFFFFF;
+  &::placeholder {
+    color: #ffffff;
     opacity: 1;
   }
 }
