--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header class="absolute w-full z-10"></app-header>
 <router-outlet></router-outlet>
+<app-footer class="absolute bottom-16 w-full z-10"></app-footer>
