--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,23 @@
-<main class="flex justify-between py-10 px-24">
+<main class="flex justify-between py-10 sm:px-24 px-4">
   <img
     src="assets/images/videoflix_logo.svg"
     alt="Videoflix Logo"
-    class="cursor-pointer"
+    class="hidden sm:block cursor-pointer"
     [routerLink]="'/'"
   />
-  <p-button
-    severity="primary"
-    class="font-bold text-lg"
-    label="Log in"
-    [routerLink]="'/login'"
-  ></p-button>
+
+  <img
+    src="assets/images/videoflix_logo_kurz.png"
+    alt="Videoflix Logo (small)"
+    class="block sm:hidden cursor-pointer"
+    [routerLink]="'/'"
+  />
+  @if (showLoginButton()) {
+    <p-button
+      severity="primary"
+      class="font-bold text-lg"
+      label="Log in"
+      [routerLink]="'/login'"
+    ></p-button>
+  }
 </main>
