added forgot and reset-password page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,15 @@
 @import "primeicons/primeicons.css";
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 1000px #1c1a20cc inset !important;
+  box-shadow: 0 0 0 1000px #1c1a20cc inset !important;
+  -webkit-text-fill-color: #ffffff !important;
+  border: 1px solid var(--p-primary-color) !important;
+  caret-color: #ffffff !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+}
+
+
