--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <main class="relative min-h-screen bg-cover bg-center bg-no-repeat login-bg flex flex-col items-center justify-center text-white text-center">
   <form class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto">
-    <h1 class="font-bold text-5xl">Log in</h1>
+    <h1 class="font-bold sm:text-5xl text-4xl">Log in</h1>
 
     <p-iconfield class="sm:w-96 w-full">
       <p-inputicon [styleClass]="primeicons.ENVELOPE"  />
@@ -31,7 +31,7 @@
 
       <a class="font-medium text-lg" href="/forgot-password">Forgot password?</a>
       <div class="flex jusify-center items-center gap-4">
-        <p class="font-medium text-lg">New to Videoflix?</p>
+        <p class="sm:font-medium font-normal sm:text-lg text-base">New to Videoflix?</p>
         <a class="font-bold text-lg" href="/sign-up">Sign up now</a>
       </div>
     </div>
