--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
   <form
     class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto"
   >
-    <h1 class="font-bold text-5xl">Sign Up</h1>
+    <h1 class="font-bold sm:text-5xl text-4xl">Sign Up</h1>
 
     <p-iconfield class="sm:w-96 w-full">
       <p-inputicon [styleClass]="primeicons.ENVELOPE" />
