--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,8 +1,8 @@
 <main
   class="relative min-h-screen bg-cover bg-center bg-no-repeat start-page-bg flex flex-col items-center justify-center text-white text-center"
 >
-  <h1 class="font-bold text-5xl pb-6">Movies, TV shows, and more</h1>
-  <p class="text-lg">
+  <h1 class="font-bold sm:text-5xl text-4xl pb-6">Movies, TV shows, and more</h1>
+  <p class="sm:font-medium font-normal sm:text-lg text-base">
     Enter your email to create or restart your subscription.
   </p>
   <div>
