changed type of img to webp

--- a/src/app/pages/sign-up/sign-up.component.scss
+++ b/src/app/pages/sign-up/sign-up.component.scss
@@ -5,7 +5,7 @@
       rgba(0, 0, 0, 0.55) 40.46%,
       #000000 100%
     ),
-    url("/assets/images/sign_up.jpg");
+    url("/assets/images/sign_up.webp");
 }
 
 .form-container {
