--- a/src/app/pages/start-page/start-page.component.scss
+++ b/src/app/pages/start-page/start-page.component.scss
@@ -5,7 +5,7 @@
       rgba(0, 0, 0, 0.55) 40.46%,
       #000000 100%
     ),
-    url("/assets/images/start_page.jpg");
+    url("/assets/images/start_page.webp");
 }
 
 .p-inputtext:enabled {
