--- a/src/app/pages/reset-password/reset-password.component.scss
+++ b/src/app/pages/reset-password/reset-password.component.scss
@@ -5,7 +5,7 @@
       rgba(0, 0, 0, 0.55) 40.46%,
       #000000 100%
     ),
-    url("/assets/images/login.jpg");
+    url("/assets/images/login.webp");
 }
 
 .form-container {
