--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,12 +1,12 @@
 <main
-  class="relative min-h-screen bg-cover bg-center bg-no-repeat start-page-bg flex flex-col items-center justify-center text-white text-center"
+  class="relative min-h-screen bg-cover bg-center bg-no-repeat start-page-bg flex flex-col items-center justify-center text-white text-center sm:px-8 px-4"
 >
   <h1 class="font-bold sm:text-5xl text-4xl pb-6">Movies, TV shows, and more</h1>
   <p class="sm:font-medium font-normal sm:text-lg text-base">
     Enter your email to create or restart your subscription.
   </p>
-  <div>
-    <form class="flex items-center mt-6 gap-4">
+  <div class="sm:w-auto w-full">
+    <form class="flex sm:flex-row flex-col items-center mt-6 gap-4">
       <input class="w-80" type="email" pInputText placeholder="Email Address" />
       <p-button
         [icon]="primeicons.ANGLE_RIGHT"
