added err messages to login rest-password-forgottpassword and fixed signup

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -23,6 +23,7 @@
         email
         [(ngModel)]="email"
         #emailInput="ngModel"
+        pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
       />
     </p-iconfield>
 
