--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -3,7 +3,8 @@
 >
   <form
     class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto"
-    #form="ngForm"
+    [formGroup]="form"
+    (ngSubmit)="onSubmit()"
   >
     <h1 class="font-bold sm:text-5xl text-4xl">Reset password</h1>
 
@@ -12,37 +13,39 @@
       <a class="text-primary" href="/">Videoflix</a> account.
     </p>
 
-    <p-iconfield class="sm:w-96 w-full">
-      <p-inputicon [styleClass]="primeicons.LOCK" />
-      <input
-        class="w-full"
-        [type]="showPassword ? 'text' : 'password'"
-        name="password"
-        [(ngModel)]="password"
-        required
-        pInputText
-        placeholder="Enter a password"
-        #passwordInput="ngModel"
-      />
-      <p-inputicon
-        [styleClass]="showPassword ? primeicons.EYE_SLASH : primeicons.EYE"
-        (click)="togglePassword('showPassword')"
-        class="cursor-pointer"
-      />
-    </p-iconfield>
+    <div class="flex flex-col items-start gap-1">
+      <p-iconfield class="sm:w-96 w-full">
+        <p-inputicon [styleClass]="primeicons.KEY" />
+        <input
+          class="w-full"
+          [type]="showPassword ? 'text' : 'password'"
+          pInputText
+          formControlName="password"
+          placeholder="Enter a password"
+        />
+        <p-inputicon
+          [styleClass]="showPassword ? primeicons.EYE_SLASH : primeicons.EYE"
+          (click)="togglePassword('showPassword')"
+          class="cursor-pointer"
+        />
+      </p-iconfield>
+      @if ( form.controls['password'].invalid &&
+      form.controls['password'].touched ) {
+      <p class="text-red-400 text-sm">
+        Password must be at least 8 characters.
+      </p>
+      }
+    </div>
 
     <div class="flex flex-col items-start gap-1">
       <p-iconfield class="sm:w-96 w-full">
-        <p-inputicon [styleClass]="primeicons.LOCK" />
+        <p-inputicon [styleClass]="primeicons.KEY" />
         <input
           class="w-full"
           [type]="showConfirmPassword ? 'text' : 'password'"
-          name="confirmPassword"
-          [(ngModel)]="confirmPassword"
-          required
           pInputText
+          formControlName="confirmPassword"
           placeholder="Confirm password"
-          #confirmInput="ngModel"
         />
         <p-inputicon
           [styleClass]="
@@ -52,7 +55,8 @@
           class="cursor-pointer"
         />
       </p-iconfield>
-      @if (confirmPassword && password !== confirmPassword) {
+      @if (form.controls['confirmPassword'].invalid &&
+      form.controls['confirmPassword'].touched) {
       <p class="text-red-400 text-sm">Passwords do not match.</p>
       }
     </div>
@@ -61,7 +65,7 @@
       severity="primary"
       class="font-bold text-lg"
       label="Reset my password"
-      [disabled]="form.invalid || password !== confirmPassword"
+      type="submit"
     ></p-button>
   </form>
 </main>
