--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,26 +1,40 @@
-<main class="relative min-h-screen bg-cover bg-center bg-no-repeat login-bg flex flex-col items-center justify-center text-white text-center">
-  <form class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto">
+<main
+  class="relative min-h-screen bg-cover bg-center bg-no-repeat login-bg flex flex-col items-center justify-center text-white text-center"
+>
+  <form
+    class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto"
+  >
     <h1 class="font-bold sm:text-5xl text-4xl">Log in</h1>
 
     <p-iconfield class="sm:w-96 w-full">
-      <p-inputicon [styleClass]="primeicons.ENVELOPE"  />
-      <input class="w-full" type="email" pInputText placeholder="Email Address" />
-    </p-iconfield>
-
-    <p-iconfield class="sm:w-96 w-full" >
-      <p-inputicon [styleClass]="primeicons.LOCK" />
+      <p-inputicon [styleClass]="primeicons.ENVELOPE" />
       <input
         class="w-full"
-        [type]="showPassword ? 'text' : 'password'"
+        type="email"
         pInputText
-        placeholder="Password"
+        placeholder="Email Address"
       />
-      <p-inputicon
-        [styleClass]="showPassword ? primeicons.EYE_SLASH : primeicons.EYE"
-        (click)="togglePassword()"
-        class="cursor-pointer"
-        />
     </p-iconfield>
+
+    <div class="flex flex-col items-start gap-1">
+      <p-iconfield class="sm:w-96 w-full">
+        <p-inputicon [styleClass]="primeicons.LOCK" />
+        <input
+          class="w-full"
+          [type]="showPassword ? 'text' : 'password'"
+          pInputText
+          placeholder="Password"
+        />
+        <p-inputicon
+          [styleClass]="showPassword ? primeicons.EYE_SLASH : primeicons.EYE"
+          (click)="togglePassword()"
+          class="cursor-pointer"
+        />
+      </p-iconfield>
+      @if (loginError) {
+      <p class="text-red-400 text-sm">*Email or password is incorrect.</p>
+      }
+    </div>
 
     <div class="flex flex-col gap-4">
       <p-button
@@ -29,9 +43,13 @@
         label="Log in"
       ></p-button>
 
-      <a class="font-medium text-lg" href="/forgot-password">Forgot password?</a>
+      <a class="font-medium text-lg" href="/forgot-password"
+        >Forgot password?</a
+      >
       <div class="flex jusify-center items-center gap-4">
-        <p class="sm:font-medium font-normal sm:text-lg text-base">New to Videoflix?</p>
+        <p class="sm:font-medium font-normal sm:text-lg text-base">
+          New to Videoflix?
+        </p>
         <a class="font-bold text-lg" href="/sign-up">Sign up now</a>
       </div>
     </div>
