--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -13,6 +13,8 @@
         type="email"
         pInputText
         placeholder="Email Address"
+        [(ngModel)]="email"
+        name="email"
       />
     </p-iconfield>
 
