--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,7 +18,7 @@
       />
     </p-iconfield>
 
-    <div class="flex flex-col items-start gap-1">
+    <div class="flex flex-col items-start gap-1 w-full">
       <p-iconfield class="sm:w-96 w-full">
         <p-inputicon [styleClass]="primeicons.LOCK" />
         <input
