--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -8,7 +8,7 @@
   >
     <h1 class="font-bold sm:text-5xl text-4xl">Sign Up</h1>
 
-    <div class="flex flex-col items-start gap-1">
+    <div class="flex flex-col items-start gap-1 w-full">
       <p-iconfield class="sm:w-96 w-full">
         <p-inputicon [styleClass]="primeicons.ENVELOPE" />
         <input
@@ -24,7 +24,7 @@
       }
     </div>
 
-    <div class="flex flex-col items-start gap-1">
+    <div class="flex flex-col items-start gap-1 w-full">
       <p-iconfield class="sm:w-96 w-full">
         <p-inputicon [styleClass]="primeicons.KEY" />
         <input
@@ -48,7 +48,7 @@
       }
     </div>
 
-    <div class="flex flex-col items-start gap-1">
+    <div class="flex flex-col items-start gap-1 w-full">
       <p-iconfield class="sm:w-96 w-full">
         <p-inputicon [styleClass]="primeicons.KEY" />
         <input
@@ -78,5 +78,8 @@
       label="Get Started"
       type="submit"
     ></p-button>
+    @if (showSpinner) {
+      <p-progress-spinner strokeWidth="8" fill="transparent" animationDuration=".5s" [style]="{ width: '50px', height: '50px' }" />
+    }
   </form>
 </main>
