--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,10 @@ input:-webkit-autofill:active {
 }
 
 
+.p-toast {
+  max-width: 90vw;
+  width: auto;
+  min-width: 240px;
+  word-break: break-word;
+}
+
