added login with forms error messages

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,20 +3,29 @@
 >
   <form
     class="form-container flex flex-col items-center mt-6 gap-8 py-11 sm:px-14 px-6 w-80 sm:w-auto"
+    [formGroup]="form"
+    (ngSubmit)="onSubmit()"
   >
     <h1 class="font-bold sm:text-5xl text-4xl">Log in</h1>
 
-    <p-iconfield class="sm:w-96 w-full">
-      <p-inputicon [styleClass]="primeicons.ENVELOPE" />
-      <input
-        class="w-full"
-        type="email"
-        pInputText
-        placeholder="Email Address"
-        [(ngModel)]="email"
-        name="email"
-      />
-    </p-iconfield>
+    <div class="flex flex-col items-start gap-1 w-full">
+      <p-iconfield class="sm:w-96 w-full">
+        <p-inputicon [styleClass]="primeicons.ENVELOPE" />
+        <input
+          class="w-full"
+          type="email"
+          pInputText
+          placeholder="Email Address"
+          formControlName="email"
+        />
+      </p-iconfield>
+      @if (form.controls['email'].touched && form.controls['email'].errors) {
+      @if (form.controls['email'].errors['required']) {
+      <p class="text-red-400 text-sm">Email is required.</p>
+      } @if (form.controls['email'].errors['pattern']) {
+      <p class="text-red-400 text-sm">Enter a valid email address.</p>
+      } }
+    </div>
 
     <div class="flex flex-col items-start gap-1 w-full">
       <p-iconfield class="sm:w-96 w-full">
@@ -26,6 +35,7 @@
           [type]="showPassword ? 'text' : 'password'"
           pInputText
           placeholder="Password"
+          formControlName="password"
         />
         <p-inputicon
           [styleClass]="showPassword ? primeicons.EYE_SLASH : primeicons.EYE"
@@ -33,8 +43,9 @@
           class="cursor-pointer"
         />
       </p-iconfield>
-      @if (loginError) {
-      <p class="text-red-400 text-sm">*Email or password is incorrect.</p>
+      @if ( form.controls['password'].invalid &&
+      form.controls['password'].touched ) {
+      <p class="text-red-400 text-sm">Password is required.</p>
       }
     </div>
 
@@ -43,7 +54,12 @@
         severity="primary"
         class="font-bold text-lg"
         label="Log in"
+        type="submit"
       ></p-button>
+
+      @if (loginError !== '') {
+      <p class="text-red-400 text-sm">{{ loginError }}</p>
+      }
 
       <a class="font-medium text-lg" href="/forgot-password"
         >Forgot password?</a
@@ -55,5 +71,14 @@
         <a class="font-bold text-lg" href="/sign-up">Sign up now</a>
       </div>
     </div>
+
+    @if (showSpinner) {
+    <p-progress-spinner
+      strokeWidth="8"
+      fill="transparent"
+      animationDuration=".5s"
+      [style]="{ width: '50px', height: '50px' }"
+    />
+    }
   </form>
 </main>
