refactor: update routing and enhance password reset functionality

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -32,6 +32,7 @@
       class="font-bold text-lg"
       label="Send Email"
       [disabled]="form.invalid"
+      (click)="onForgotPasswordBtnClick()"
     ></p-button>
   </form>
 </main>
