--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
-<main class="flex justify-between py-10 sm:px-24 px-4">
+<main
+class="flex justify-between py-10 sm:px-24 px-4"
+[ngClass]="{'gradient': showLogoutButton()}">
   <img
     src="assets/images/videoflix_logo.svg"
     alt="Videoflix Logo"
