feat: refactor footer and main page components, add button module, and update styles

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,5 @@
 <main
-class="flex justify-between py-10 sm:px-24 px-4"
-[ngClass]="{'gradient': showLogoutButton()}">
+class="flex justify-between py-10 sm:px-24 px-4">
   <img
     src="assets/images/videoflix_logo.svg"
     alt="Videoflix Logo"
