--- a/src/app/pages/mainpage/mainpage.component.scss
+++ b/src/app/pages/mainpage/mainpage.component.scss
@@ -1,3 +1,12 @@
 .gradient {
   background: linear-gradient(180deg, rgba(20, 20, 20, 0.6) 0%, rgba(20, 20, 20, 0) 50%, #141414 100%);
 }
+
+/* styles.scss oder global.scss */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
