--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,6 @@
-<main class="flex justify-center gap-12 text-white">
+@if (showFooter()) {
+<footer class="flex justify-center gap-12 text-white">
   <a class="text-lg font-medium" href="/privacy-policy">Privacy Policy</a>
   <a class="text-lg font-medium" href="/impressum">Impressum</a>
-</main>
+</footer>
+}
