--- a/src/app/pages/mainpage/mainpage.component.html
+++ b/src/app/pages/mainpage/mainpage.component.html
@@ -1,8 +1,10 @@
 <main class="text-white">
-  <div class="w-full relative md:block hidden">
-    <div class="gradient w-full h-full absolute top-0 left-0"></div>
+  <div class="w-full relative min-h-[800px] md:block hidden">
+    <div
+      class="gradient w-full h-full absolute top-0 left-0 inset-0 gradient z-10"
+    ></div>
     <img
-      class="w-full object-cover h-full block"
+      class="absolute inset-0 w-full h-full object-cover z-0"
       [src]="selectedVideo?.thumbnail"
       alt="Selected Video Thumbnail"
     />
@@ -24,7 +26,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col gap-12 sm:px-24 px-4 xl:-mt-32 md:pt-0 pt-36">
+  <div class="flex flex-col gap-12 sm:px-24 px-4 md:pt-0 pt-36">
     @for (genre of genres; track $index) { @if (hasVideosForGenre(genre.name)) {
     <div class="flex flex-col gap-4 relative">
       <h2 class="text-2xl font-bold">{{ genre.name }}</h2>
@@ -41,7 +43,7 @@
               class="w-full object-cover rounded-lg cursor-pointer transition-transform duration-200 hover:scale-105"
               [src]="video.thumbnail"
               alt="{{ video.title }}"
-              (click)="selectedVideo = video"
+              (click)="onVideoClick(video)"
             />
           </div>
           } }
