--- a/src/app/pages/video-detail/video-detail.component.html
+++ b/src/app/pages/video-detail/video-detail.component.html
@@ -1,4 +1,4 @@
-<main class="text-white">
+<main class="text-white ">
   <div class="w-full relative min-h-96">
     <div
       class="gradient w-full h-full absolute top-0 left-0 inset-0 gradient z-10"
@@ -17,6 +17,7 @@
       class="font-bold text-lg"
       label="Play"
       [icon]="primeIcons.CARET_RIGHT"
+      (click)="video && onPlayVideo(video)"
     ></p-button>
   </div>
 </main>
