--- a/src/app/pages/videoplayer/videoplayer.component.scss
+++ b/src/app/pages/videoplayer/videoplayer.component.scss
@@ -1,5 +1,9 @@
 .header-video-player {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    #000000b3 0%,
+    #00000000 100%
+  );
 }
 
 .icon {
@@ -11,47 +15,27 @@
   }
 }
 
-
-.vjs-resolution-button {
-  position: relative;
+::ng-deep .vjs-quality-button:hover {
+  background-color: #3a3a3acc;
 }
 
-.vjs-resolution-button {
-  position: relative;
-
-  .pi {
-    font-size: 1.3rem;
-    pointer-events: none;
-  }
+::ng-deep .vjs-quality-toggle {
+  cursor: pointer !important;
 }
 
-.vjs-resolution-menu {
-  position: absolute;
-  bottom: 50px;
-  right: 6px;
-  background: rgba(0, 0, 0, 0.85);
-  padding: 0.4rem;
-  border-radius: 6px;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  z-index: 999;
-  min-width: 80px;
-
-  .vjs-resolution-option {
-    color: white;
-    cursor: pointer;
-    padding: 4px 8px;
-    border-radius: 4px;
-
-    &:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-  }
+::ng-deep .vjs-quality-toggle:hover::before {
+  text-shadow: none !important;
+  background-color: transparent !important;
 }
 
-.vjs-hidden {
-  display: none;
+::ng-deep .vjs-quality-toggle::before {
+  background-color: transparent !important;
 }
 
-
+::ng-deep .vjs-quality-toggle,
+::ng-deep .vjs-quality-toggle:hover,
+::ng-deep .vjs-quality-toggle:focus {
+  background-color: transparent !important;
+  text-shadow: none !important;
+  outline: none !important;
+}
