added differnet layouts for routing + added imprint and privacy policy

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 @if (showFooter()) {
-<footer class="flex justify-center gap-12 text-white">
-  <a class="text-lg font-medium" href="/privacy-policy">Privacy Policy</a>
-  <a class="text-lg font-medium" href="/impressum">Impressum</a>
+<footer class="flex justify-center gap-12 text-white py-8">
+  <a class="text-lg font-medium" href="/info/privacy-policy">Privacy Policy</a>
+  <a class="text-lg font-medium" href="/info/imprint">Imprint</a>
 </footer>
 }
